--- a/ml_env/share/jupyter/labextensions/catboost-widget/package.json
+++ b/ml_env/share/jupyter/labextensions/catboost-widget/package.json
@@ -1,21 +1,17 @@
 {
   "name": "catboost-widget",
-  "version": "1.2.7",
+  "version": "1.0.0",
   "description": "CatBoost widget for plots in Jupyter",
   "main": "src/index.js",
-  "files": [
-    "src/**/*",
-    "dist/**/*"
-  ],
   "scripts": {
     "build": "webpack --mode=production && jupyter labextension build .",
-    "clean": "rimraf dist && rimraf nbextension && rimraf labextension",
+    "clean": "rimraf dist && rimraf ../nbextension && rimraf ../labextension",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "gocd-catboost",
   "license": "ISC",
   "dependencies": {
-    "@jupyter-widgets/base": "^2 || ^3 || ^4 || ^5 || ^6",
+    "@jupyter-widgets/base": "^2 || ^3 || ^4.0.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "plotly.js-dist-min": "^1.58.4"
@@ -30,7 +26,7 @@
   },
   "jupyterlab": {
     "extension": "src/labplugin",
-    "outputDir": "labextension",
+    "outputDir": "../labextension",
     "sharedPackages": {
       "@jupyter-widgets/base": {
         "bundled": false,
@@ -38,7 +34,7 @@
       }
     },
     "_build": {
-      "load": "static\\remoteEntry.e156f140be4f3686c3d9.js",
+      "load": "static\\remoteEntry.271667258200d263591b.js",
       "extension": "./extension"
     }
   }
